--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "yourRootPassword",
-    "database": "passport_demo",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "test": {
-    "username": "root",
     "password": "rootroot",
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "root",
-    "password": "rootroot",
-    "database": "database_production",
+    "database": "vacation_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
