Added production to config.json

--- a/config/config.json
+++ b/config/config.json
@@ -5,5 +5,12 @@
     "database": "vacation_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
+  },
+  "production": {
+    "username": "root",
+    "password": "rootroot",
+    "database": "vacation_db",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
   }
 }
