--- a/config/config.json
+++ b/config/config.json
@@ -7,10 +7,7 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "rootroot",
-    "database": "vacation_db",
-    "host": "127.0.0.1",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
 }
